
Google Calendar Connectors Changelog
====================================
v1.2 []
------------------
* FEATURE: Removed the need from a template user, the FB messages are created from scratch now.
* BUG FIX: Reduced to 1 the number of WebDAV requests made to create a FB message.
* FEATURE: The Exchange FB for the GCalendar users now has tentative.
* BUG FIX: Various performance optimizations.

v1.1 [14-May-2008]
------------------
* BUG FIX: Fixed various problems with syncing Appointments with Exchange
* BUG FIX: Fixed appointment sync creation of duplicates if fetch failed
* Added much more unittesting
* Added setting for Appointment sync placeholder - SyncService.PlaceHolderMessage
* Removed some obsolete/unnecessary settings from the config files
* Added code comments and checked in API documentation
* Added Diagnostics UI for encrypting web.config settings
* BUG FIX: Fixed how timezones are used throughout

v1.00 Build 36 [18-Apr-2008]
------------------
* BUG FIX: Fix memory leak in GData.NET
* BUG FIX: Improvements / fixes in appointment writing + unittests

v1.00 Build 36 [30-Mar-2008]
------------------
* BUG FIX: Default writer is now SchedulePlus
* BUG FIX: Fixed a bug with disable appointment lookup option
* BUG FIX: Free Busy lookup now use Display Name rather than common name
* BUG FIX: Web Service now returns LDAP display name rather than common name
* BUG FIX: Default Sync Service interval is 15 mins
* BUG FIX: Added debug logging of timezone conversion to FreeBusyWriter
* BUG FIX: Force Sync Service to use x86 binary

v1.00 Build 35 [12-Mar-2008]
------------------
* BUG FIX: Fixed a typo in config file
* BUG FIX: Fixed bug with multithreading
* BUG FIX: Handle exception for timezones in DST changeover period.
* BUG FIX: Fixed bug with cross-domain mapping

v1.00 [26-Feb-2008]
------------------
* BUG FIX: Fixed minor security issues
* BUG FIX: Add version # to install
* BUG FIX: Updated copyright messages