@@ -52,6 +52,7 @@ namespace GCalExchangeLookup
             LabelExchAdminUser.Text = ConfigCache.ExchangeAdminLogin;
 
             LabelAdminGroup.Text = ConfigCache.AdminServerGroup;
+            LabelMachineName.Text = Environment.MachineName;
 
             Server.ScriptTimeout = 600; // 10 mins
 
